{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 62,
  "lineage": "b897931e-a72f-f0e7-24cc-f96190c22d7c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06a550af32c7dda36",
            "arn": "arn:aws:ec2:sa-east-1:145500728064:instance/i-0c9da5c91aae0f6ad",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c9da5c91aae0f6ad",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0139920b8c0ee6147",
            "private_dns": "ip-10-0-0-239.sa-east-1.compute.internal",
            "private_ip": "10.0.0.239",
            "public_dns": "ec2-18-231-84-120.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.231.84.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0881b82784bf8c50d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0237c48e96e93f44b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d2168fd3fe3e3d0c",
            "tags": {
              "name": "vpn ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0237c48e96e93f44b"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:145500728064:internet-gateway/igw-0455d1a3bd43fe2be",
            "id": "igw-0455d1a3bd43fe2be",
            "owner_id": "145500728064",
            "tags": {
              "name": "vpn internet gateway"
            },
            "vpc_id": "vpc-04786632b2a2ac995"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0455d1a3bd43fe2be",
            "id": "r-rtb-01c2ec973229e36cb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01c2ec973229e36cb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:145500728064:security-group/sg-0237c48e96e93f44b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0237c48e96e93f44b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg",
            "name_prefix": "",
            "owner_id": "145500728064",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpn security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04786632b2a2ac995"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:145500728064:subnet/subnet-0d2168fd3fe3e3d0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0d2168fd3fe3e3d0c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "145500728064",
            "tags": {
              "name": "subnet cluster vpn"
            },
            "vpc_id": "vpc-04786632b2a2ac995"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:145500728064:vpc/vpc-04786632b2a2ac995",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0adfed672cb4597cf",
            "default_route_table_id": "rtb-01c2ec973229e36cb",
            "default_security_group_id": "sg-02c31b39a9e43c883",
            "dhcp_options_id": "dopt-844c0ce3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04786632b2a2ac995",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01c2ec973229e36cb",
            "owner_id": "145500728064",
            "tags": {
              "name": "vpn vpc"
            }
          }
        }
      ]
    }
  ]
}